--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
