--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
-		"Hotel_Booking_App": {
+		"skillspire": {
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
@@ -66,10 +66,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "Hotel_Booking_App:build:production"
+							"browserTarget": "skillspire:build:production"
 						},
 						"development": {
-							"browserTarget": "Hotel_Booking_App:build:development"
+							"browserTarget": "skillspire:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -77,7 +77,7 @@
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "Hotel_Booking_App:build"
+						"browserTarget": "skillspire:build"
 					}
 				},
 				"test": {
