--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,16 @@
 						"styles": [
 							"./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
 							"./node_modules/bootstrap/dist/css/bootstrap.min.css",
-							"src/styles.scss"
+							
+							"src/styles.scss",
+							"node_modules/slick-carousel/slick/slick.scss",
+							"node_modules/slick-carousel/slick/slick-theme.scss"
+							
 						],
-						"scripts": []
+						"scripts": [
+							"node_modules/jquery/dist/jquery.min.js",
+							"node_modules/slick-carousel/slick/slick.min.js"
+						]
 					},
 					"configurations": {
 						"production": {
