--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.7.0",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
     "schematics-scss-migrate": "^2.3.17",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
