--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,14 @@
 						"styles": [
 							"./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
 							"./node_modules/bootstrap/dist/css/bootstrap.min.css",
+							"node_modules/slick-carousel/slick/slick.scss",
+							"node_modules/slick-carousel/slick/slick-theme.scss",
 							"src/styles.scss"
 						],
-						"scripts": []
+						"scripts": [
+							"node_modules/jquery/dist/jquery.min.js",
+    						"node_modules/slick-carousel/slick/slick.min.js"
+						]
 					},
 					"configurations": {
 						"production": {
@@ -93,9 +98,14 @@
 							"src/assets"
 						],
 						"styles": [
+							"node_modules/slick-carousel/slick/slick.scss",
+    						"node_modules/slick-carousel/slick/slick-theme.scss",
 							"src/styles.scss"
 						],
-						"scripts": []
+						"scripts": [
+							"node_modules/jquery/dist/jquery.min.js",
+    						"node_modules/slick-carousel/slick/slick.min.js"
+						]
 					}
 				}
 			}
